[gd_scene load_steps=7 format=3 uid="uid://qnqdm7vosmaa"]

[ext_resource type="Script" path="res://Map/ScreenEditPanel.gd" id="1_2ohtn"]
[ext_resource type="PackedScene" uid="uid://c5vi5i8oxnced" path="res://Map/exit_edit.tscn" id="1_g6dvb"]
[ext_resource type="Texture2D" uid="uid://n4bcq5tekwi3" path="res://Map/MapTileBG.png" id="2_bj61o"]
[ext_resource type="Texture2D" uid="uid://dj7kbki6l2p5s" path="res://Map/MapSprites.png" id="3_nkcsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mt8k5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w4qr"]

[node name="ScreenEditPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_2ohtn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Field Name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Gate of Guidance"
alignment = 1

[node name="Screen Name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Main Entryway"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitEdit" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_g6dvb")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ExitEdit" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("1_g6dvb")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_bj61o")

[node name="Icon1" type="Sprite2D" parent="VBoxContainer/HBoxContainer2/TextureRect"]
position = Vector2(26, 42)
scale = Vector2(2, 2)
texture = ExtResource("3_nkcsf")
hframes = 13

[node name="Area2D" type="Area2D" parent="VBoxContainer/HBoxContainer2/TextureRect/Icon1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/HBoxContainer2/TextureRect/Icon1/Area2D"]
shape = SubResource("RectangleShape2D_mt8k5")

[node name="Icon2" type="Sprite2D" parent="VBoxContainer/HBoxContainer2/TextureRect"]
position = Vector2(69, 42)
scale = Vector2(2, 2)
texture = ExtResource("3_nkcsf")
hframes = 13

[node name="Area2D" type="Area2D" parent="VBoxContainer/HBoxContainer2/TextureRect/Icon2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VBoxContainer/HBoxContainer2/TextureRect/Icon2/Area2D"]
shape = SubResource("RectangleShape2D_3w4qr")

[node name="ExitEdit2" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("1_g6dvb")]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitEdit" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("1_g6dvb")]
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/Field Name" to="." method="_on_field_name_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/Screen Name" to="." method="_on_screen_name_text_submitted"]
[connection signal="input_event" from="VBoxContainer/HBoxContainer2/TextureRect/Icon1/Area2D" to="." method="_on_icon_input_event" binds= [true]]
[connection signal="input_event" from="VBoxContainer/HBoxContainer2/TextureRect/Icon2/Area2D" to="." method="_on_icon_input_event" binds= [false]]
